# af-poc

./: .gitignore  GETTING_STARTED.md  Makefile  QUICKSTART.md  README.md  setup-azure-apps.sh  setup-payroll-api-azure.sh
dotnet-agent/: .gitignore  AgentService.sln  README.md
dotnet-agent/AgentService/: AgentService.csproj  Program.cs  appsettings.local.json.example
dotnet-payroll-api/: .env.example  .gitignore  PayrollApi.sln  README.md
dotnet-payroll-api/PayrollApi/: PayrollApi.csproj  PayrollApi.http  Program.cs  WeatherForecast.cs  appsettings.json  appsettings.local.json.example
frontend/: .example.env.local  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  package.json
frontend/app/: assistant.tsx  layout.tsx
monitoring/: .gitignore  README.md  docker-compose.yml  grafana-dashboards.yml  grafana-datasources.yml  otel-collector-config.yml  prometheus-config.yml  tempo-config.yml
orchestrator/: .env.example  .gitignore  ACCOUNT_TYPES_COMPARISON.md  AZURE_AD_SETUP.md  JWT_OBO_IMPLEMENTATION_PLAN.md  OBO_SETUP_INDEX.md  PERSONAL_AZURE_ACCOUNT_OBO_GUIDE.md  QUICK_START_PERSONAL_ACCOUNT.md  README.md  pyproject.toml
orchestrator/src/: __init__.py  agent_framework_impl.py  agent_selector.py  api.py  audit.py  auth.py  authorization.py  config.py  constants.py  intelligent_routing.py  main.py  models.py  sub_agent_client.py
orchestrator/tests/: __init__.py  test_agent_selector.py  test_api.py
python-agent/: .env.example  .gitignore  README.md  README_AGENT_FRAMEWORK.md  pyproject.toml  test_agent.py
(+42 files in other folders)
